src/dev-blog-argo-cd-binnen-gitops-processen-en-kubernetes/argo-cd/environments/dev/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f ./docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f ./docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: DB_PASSWORD
              value: MyStrongPassword123
            - name: DB_PORT
              value: "1433"
            - name: DB_USER
              value: SA
          image: kslingerland/api-k8s:latest
          name: api
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
